# BookReader

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
packaging/: bookreader.desktop
public/: manifest.webmanifest  sw.js
scripts/: bookreader-launch.sh  bookreader_sqlite.py  install_piper_voices.sh
server/: README.md  bookreader-api.mjs
server/comfy/: bookreader-workflow-api.json
src/: App.tsx  main.tsx  pwa.ts  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/lib/: bookProject.ts  bookreaderApi.ts  chapters.test.ts  chapters.ts  documentParser.ts  storyInsights.test.ts  storyInsights.ts
